--- a/13-Web-Scraping/Excercise And Notes/118 . Python Web Scraping - Grabbing A Title.ipynb
+++ b/13-Web-Scraping/Excercise And Notes/118 . Python Web Scraping - Grabbing A Title.ipynb
@@ -3,12 +3,62 @@
   {
    "cell_type": "markdown",
    "id": "9115bfe7",
+   "metadata": {},
+   "source": [
+    "# <span style='color:Yellow'><center> <em>Section 15 </em></center> </span>\n",
+    "<h2> <span style='color:Yellow'><center> <em>Grabbing a title</em></center> </span></h2>\n",
+    "<center><em>Video : 118 . Python Web Scraping - Grabbing a Title WebHD_720p </em></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "opening-journey",
    "metadata": {
     "heading_collapsed": true
    },
    "source": [
-    "# Grabbing a Title from Jupyter Notebook"
+    "## Grabbing a Title from Jupyter Notebook"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "exciting-scanner",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "rolled-cargo",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dramatic-madness",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "advised-columbia",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -37,7 +87,7 @@
     "heading_collapsed": true
    },
    "source": [
-    "# Requests Library"
+    "## Requests Library"
    ]
   },
   {
@@ -113,7 +163,9 @@
   {
    "cell_type": "markdown",
    "id": "90d171fe",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "# Beautiful Soup Library"
    ]
@@ -122,7 +174,9 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "9acfaca5",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "import bs4\n",
@@ -133,7 +187,9 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "871d1b07",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "mysoup = bs4.BeautifulSoup(result.text,\"lxml\")"
@@ -143,7 +199,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "d04708ae",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -208,7 +266,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "63d1a682",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -229,7 +289,9 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "6ba4a634",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -252,7 +314,9 @@
    "cell_type": "code",
    "execution_count": 15,
    "id": "918c0d79",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -273,7 +337,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "ea0aac38",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "siteparagraph = mysoup.select('p')"
@@ -283,7 +349,9 @@
    "cell_type": "code",
    "execution_count": 17,
    "id": "dd4a0e91",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -306,7 +374,9 @@
    "cell_type": "code",
    "execution_count": 18,
    "id": "b47aee2d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -327,7 +397,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "c1fbf6fe",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -351,7 +423,9 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "04d55677",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -373,7 +447,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6454cb5d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "Testlist[0]"
@@ -382,15 +458,19 @@
   {
    "cell_type": "markdown",
    "id": "9b204a4d",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "### String Matching.  ( CSS Syntax)"
+    "## String Matching.  ( CSS Syntax)"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "91d71f7b",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "<table>\n",
     "\n",
@@ -454,8 +534,244 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "cc482584",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-433b9273b163>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-433b9273b163>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    <h2> <span style='color:Yellow'><center> <em>Grabbing a title</em></center> </span></h2>\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "<h2> <span style='color:Yellow'><center> <em>Grabbing a title</em></center> </span></h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "residential-climb",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "affiliated-large",
+   "metadata": {},
+   "source": [
+    "# <span style='color:Yellow'><center> <em>Excercise</em></center> </span>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "female-owner",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bs4\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bigger-renaissance",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myrequest = requests.get(\"http://example.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "accredited-respondent",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "requests.models.Response"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(myrequest)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "friendly-ontario",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<!doctype html>\\n<html>\\n<head>\\n    <title>Example Domain</title>\\n\\n    <meta charset=\"utf-8\" />\\n    <meta http-equiv=\"Content-type\" content=\"text/html; charset=utf-8\" />\\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\" />\\n    <style type=\"text/css\">\\n    body {\\n        background-color: #f0f0f2;\\n        margin: 0;\\n        padding: 0;\\n        font-family: -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", \"Open Sans\", \"Helvetica Neue\", Helvetica, Arial, sans-serif;\\n        \\n    }\\n    div {\\n        width: 600px;\\n        margin: 5em auto;\\n        padding: 2em;\\n        background-color: #fdfdff;\\n        border-radius: 0.5em;\\n        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);\\n    }\\n    a:link, a:visited {\\n        color: #38488f;\\n        text-decoration: none;\\n    }\\n    @media (max-width: 700px) {\\n        div {\\n            margin: 0 auto;\\n            width: auto;\\n        }\\n    }\\n    </style>    \\n</head>\\n\\n<body>\\n<div>\\n    <h1>Example Domain</h1>\\n    <p>This domain is for use in illustrative examples in documents. You may use this\\n    domain in literature without prior coordination or asking for permission.</p>\\n    <p><a href=\"https://www.iana.org/domains/example\">More information...</a></p>\\n</div>\\n</body>\\n</html>\\n'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myrequest.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "blank-learning",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bs4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "permanent-league",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = bs4.BeautifulSoup(myrequest.text,'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "three-judge",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<!DOCTYPE html>\n",
+       "<html>\n",
+       "<head>\n",
+       "<title>Example Domain</title>\n",
+       "<meta charset=\"utf-8\"/>\n",
+       "<meta content=\"text/html; charset=utf-8\" http-equiv=\"Content-type\"/>\n",
+       "<meta content=\"width=device-width, initial-scale=1\" name=\"viewport\"/>\n",
+       "<style type=\"text/css\">\n",
+       "    body {\n",
+       "        background-color: #f0f0f2;\n",
+       "        margin: 0;\n",
+       "        padding: 0;\n",
+       "        font-family: -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", \"Open Sans\", \"Helvetica Neue\", Helvetica, Arial, sans-serif;\n",
+       "        \n",
+       "    }\n",
+       "    div {\n",
+       "        width: 600px;\n",
+       "        margin: 5em auto;\n",
+       "        padding: 2em;\n",
+       "        background-color: #fdfdff;\n",
+       "        border-radius: 0.5em;\n",
+       "        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);\n",
+       "    }\n",
+       "    a:link, a:visited {\n",
+       "        color: #38488f;\n",
+       "        text-decoration: none;\n",
+       "    }\n",
+       "    @media (max-width: 700px) {\n",
+       "        div {\n",
+       "            margin: 0 auto;\n",
+       "            width: auto;\n",
+       "        }\n",
+       "    }\n",
+       "    </style>\n",
+       "</head>\n",
+       "<body>\n",
+       "<div>\n",
+       "<h1>Example Domain</h1>\n",
+       "<p>This domain is for use in illustrative examples in documents. You may use this\n",
+       "    domain in literature without prior coordination or asking for permission.</p>\n",
+       "<p><a href=\"https://www.iana.org/domains/example\">More information...</a></p>\n",
+       "</div>\n",
+       "</body>\n",
+       "</html>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "bronze-opera",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<title>Example Domain</title>]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select('title')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "painted-working",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<h1>Example Domain</h1>]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select('h1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "upper-priority",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "popular-integral",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -463,7 +779,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -477,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
