--- a/13-Web-Scraping/Excercise And Notes/118 . Python Web Scraping - Grabbing A Title.ipynb
+++ b/13-Web-Scraping/Excercise And Notes/118 . Python Web Scraping - Grabbing A Title.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9115bfe7",
+   "id": "usual-string",
    "metadata": {},
    "source": [
-    "# <span style='color:Yellow'><center> <em>Section 15 </em></center> </span>\n",
-    "<h2> <span style='color:Yellow'><center> <em>Grabbing a title</em></center> </span></h2>\n",
-    "<center><em>Video : 118 . Python Web Scraping - Grabbing a Title WebHD_720p </em></center>"
+    "<h2    > <span style='color:Yellow'><center> <em>Web Scraping Note.</em></center> </span></h2>"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "opening-journey",
+   "id": "african-decision",
    "metadata": {
     "heading_collapsed": true
    },
@@ -22,8 +20,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "impressed-oliver",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "improving-involvement",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "result = requests.get(\"http://www.example.com\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "faced-consciousness",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "# result.text"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "exciting-scanner",
+   "id": "rural-surveillance",
    "metadata": {
     "hidden": true
    },
@@ -33,47 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rolled-cargo",
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dramatic-madness",
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "advised-columbia",
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76784204",
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a51fbfd2",
+   "id": "supposed-camera",
    "metadata": {
     "hidden": true
    },
@@ -82,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b533eb",
+   "id": "confident-wednesday",
    "metadata": {
     "heading_collapsed": true
    },
@@ -93,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f4350146",
+   "id": "critical-synthesis",
    "metadata": {
     "hidden": true
    },
@@ -105,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8c43422f",
+   "id": "acquired-fisher",
    "metadata": {
     "hidden": true
    },
@@ -117,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e1fd85d8",
+   "id": "likely-birth",
    "metadata": {
     "hidden": true
    },
@@ -140,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ab8f183f",
+   "id": "iraqi-velvet",
    "metadata": {
     "hidden": true
    },
@@ -162,18 +156,38 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90d171fe",
+   "id": "distinct-security",
    "metadata": {
     "heading_collapsed": true
    },
    "source": [
-    "# Beautiful Soup Library"
+    "## Beautiful Soup Library"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "graphic-python",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "worldwide-trial",
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
-   "id": "9acfaca5",
+   "id": "enormous-insider",
    "metadata": {
     "hidden": true
    },
@@ -186,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "871d1b07",
+   "id": "alpha-knife",
    "metadata": {
     "hidden": true
    },
@@ -198,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d04708ae",
+   "id": "downtown-blackjack",
    "metadata": {
     "hidden": true
    },
@@ -265,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "63d1a682",
+   "id": "adapted-answer",
    "metadata": {
     "hidden": true
    },
@@ -288,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "6ba4a634",
+   "id": "floppy-cleveland",
    "metadata": {
     "hidden": true
    },
@@ -313,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "918c0d79",
+   "id": "bibliographic-force",
    "metadata": {
     "hidden": true
    },
@@ -336,7 +350,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ea0aac38",
+   "id": "formed-speech",
    "metadata": {
     "hidden": true
    },
@@ -348,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dd4a0e91",
+   "id": "timely-divorce",
    "metadata": {
     "hidden": true
    },
@@ -373,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b47aee2d",
+   "id": "comic-reservoir",
    "metadata": {
     "hidden": true
    },
@@ -396,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c1fbf6fe",
+   "id": "accessory-motion",
    "metadata": {
     "hidden": true
    },
@@ -422,7 +436,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "04d55677",
+   "id": "democratic-butterfly",
    "metadata": {
     "hidden": true
    },
@@ -446,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6454cb5d",
+   "id": "identified-uruguay",
    "metadata": {
     "hidden": true
    },
@@ -457,17 +471,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b204a4d",
+   "id": "molecular-shepherd",
    "metadata": {
+    "heading_collapsed": true,
     "hidden": true
    },
    "source": [
-    "## String Matching.  ( CSS Syntax)"
+    "### String Matching.  ( CSS Syntax)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "91d71f7b",
+   "id": "danish-bones",
    "metadata": {
     "hidden": true
    },
@@ -534,29 +549,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "cc482584",
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-433b9273b163>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-433b9273b163>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    <h2> <span style='color:Yellow'><center> <em>Grabbing a title</em></center> </span></h2>\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "<h2> <span style='color:Yellow'><center> <em>Grabbing a title</em></center> </span></h2>"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "residential-climb",
+   "id": "beneficial-preparation",
    "metadata": {
     "hidden": true
    },
@@ -565,16 +559,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affiliated-large",
+   "id": "changed-journalist",
    "metadata": {},
    "source": [
-    "# <span style='color:Yellow'><center> <em>Excercise</em></center> </span>"
+    "# <h2> <span style='color:Yellow'><center> <em>Web Scraping Excercise.</em></center> </span></h2>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "female-owner",
+   "execution_count": 8,
+   "id": "elementary-wallace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,185 +579,58 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bigger-renaissance",
+   "id": "marked-clearing",
    "metadata": {},
    "outputs": [],
    "source": [
-    "myrequest = requests.get(\"http://example.com\")"
+    "rec = requests.get(\"http://www.example.com\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "accredited-respondent",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "requests.models.Response"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(myrequest)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "friendly-ontario",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<!doctype html>\\n<html>\\n<head>\\n    <title>Example Domain</title>\\n\\n    <meta charset=\"utf-8\" />\\n    <meta http-equiv=\"Content-type\" content=\"text/html; charset=utf-8\" />\\n    <meta name=\"viewport\" content=\"width=device-width, initial-scale=1\" />\\n    <style type=\"text/css\">\\n    body {\\n        background-color: #f0f0f2;\\n        margin: 0;\\n        padding: 0;\\n        font-family: -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", \"Open Sans\", \"Helvetica Neue\", Helvetica, Arial, sans-serif;\\n        \\n    }\\n    div {\\n        width: 600px;\\n        margin: 5em auto;\\n        padding: 2em;\\n        background-color: #fdfdff;\\n        border-radius: 0.5em;\\n        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);\\n    }\\n    a:link, a:visited {\\n        color: #38488f;\\n        text-decoration: none;\\n    }\\n    @media (max-width: 700px) {\\n        div {\\n            margin: 0 auto;\\n            width: auto;\\n        }\\n    }\\n    </style>    \\n</head>\\n\\n<body>\\n<div>\\n    <h1>Example Domain</h1>\\n    <p>This domain is for use in illustrative examples in documents. You may use this\\n    domain in literature without prior coordination or asking for permission.</p>\\n    <p><a href=\"https://www.iana.org/domains/example\">More information...</a></p>\\n</div>\\n</body>\\n</html>\\n'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "myrequest.text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "blank-learning",
+   "execution_count": 13,
+   "id": "intelligent-character",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import bs4"
+    "# rec.text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "permanent-league",
+   "execution_count": 15,
+   "id": "instant-mediterranean",
    "metadata": {},
    "outputs": [],
    "source": [
-    "soup = bs4.BeautifulSoup(myrequest.text,'lxml')"
+    "mysoup = bs4.BeautifulSoup(rec.text, 'lxml'   )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "three-judge",
+   "execution_count": 24,
+   "id": "intimate-favorite",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<!DOCTYPE html>\n",
-       "<html>\n",
-       "<head>\n",
-       "<title>Example Domain</title>\n",
-       "<meta charset=\"utf-8\"/>\n",
-       "<meta content=\"text/html; charset=utf-8\" http-equiv=\"Content-type\"/>\n",
-       "<meta content=\"width=device-width, initial-scale=1\" name=\"viewport\"/>\n",
-       "<style type=\"text/css\">\n",
-       "    body {\n",
-       "        background-color: #f0f0f2;\n",
-       "        margin: 0;\n",
-       "        padding: 0;\n",
-       "        font-family: -apple-system, system-ui, BlinkMacSystemFont, \"Segoe UI\", \"Open Sans\", \"Helvetica Neue\", Helvetica, Arial, sans-serif;\n",
-       "        \n",
-       "    }\n",
-       "    div {\n",
-       "        width: 600px;\n",
-       "        margin: 5em auto;\n",
-       "        padding: 2em;\n",
-       "        background-color: #fdfdff;\n",
-       "        border-radius: 0.5em;\n",
-       "        box-shadow: 2px 3px 7px 2px rgba(0,0,0,0.02);\n",
-       "    }\n",
-       "    a:link, a:visited {\n",
-       "        color: #38488f;\n",
-       "        text-decoration: none;\n",
-       "    }\n",
-       "    @media (max-width: 700px) {\n",
-       "        div {\n",
-       "            margin: 0 auto;\n",
-       "            width: auto;\n",
-       "        }\n",
-       "    }\n",
-       "    </style>\n",
-       "</head>\n",
-       "<body>\n",
-       "<div>\n",
-       "<h1>Example Domain</h1>\n",
-       "<p>This domain is for use in illustrative examples in documents. You may use this\n",
-       "    domain in literature without prior coordination or asking for permission.</p>\n",
-       "<p><a href=\"https://www.iana.org/domains/example\">More information...</a></p>\n",
-       "</div>\n",
-       "</body>\n",
-       "</html>"
+       "<title>Example Domain</title>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "soup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "bronze-opera",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<title>Example Domain</title>]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "soup.select('title')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "painted-working",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<h1>Example Domain</h1>]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "soup.select('h1')"
+    "mysoup.select('title')[0]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "upper-priority",
+   "id": "traditional-oracle",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -771,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "popular-integral",
+   "id": "clinical-garbage",
    "metadata": {},
    "outputs": [],
    "source": []
