--- a/13-Web-Scraping/Excercise And Notes/119 . Python Web Scraping - Grabbing A Class Webhd 720P.ipynb
+++ b/13-Web-Scraping/Excercise And Notes/119 . Python Web Scraping - Grabbing A Class Webhd 720P.ipynb
@@ -5,13 +5,38 @@
    "id": "c24b814f",
    "metadata": {},
    "source": [
-    "# Python Web Scraping - Grabbing A Class Webhd"
+    "<span style='color:Yellow'><center> <em>Section 15  Video 119</em></center> </span>\n",
+    "<h2> <span style='color:Yellow'><center> <em>Grabbing a Class</em></center> </span></h2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "settled-butter",
+   "metadata": {},
+   "source": [
+    "## Python Web Scraping - Grabbing A Class Webhd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb52cb13",
+   "id": "competent-construction",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "stupid-railway",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "selected-criticism",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -240,49 +265,111 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dbba8e07",
+   "cell_type": "markdown",
+   "id": "suitable-smoke",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<h2> <span style='color:Yellow'><center> <em>Excercise </em></center> </span></h2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "aacdd381",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "import bs4"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a619d8fd",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "res = requests.get('https://en.wikipedia.org/wiki/Grace_Hopper')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "warming-blind",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = bs4.BeautifulSoup(res.text,\"lxml\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "interesting-islam",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup.select('.toctext')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "941b8942",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "res1 = requests.get('https://wphostingreviews.com/design/blog-post-table-of-contents-examples/')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bd186777",
+   "execution_count": 8,
+   "id": "alone-reynolds",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "mysoup = bs4.BeautifulSoup( res1.text,  'lxml')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bd186777",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<html><body><p>403 - Forbidden | Access to this page is forbidden.\n",
+       "</p></body></html>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mysoup\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -296,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
