--- a/13-Web-Scraping/00-Guide-to-Web-Scraping.ipynb
+++ b/13-Web-Scraping/00-Guide-to-Web-Scraping.ipynb
@@ -1905,7 +1905,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1919,7 +1919,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.4"
   }
  },
  "nbformat": 4,
